Implement getInstanceById (v2)
